unpackaged/main/default/objects/Opportunity/fields/AARR__c.field-meta.xml
<CustomField>
    <fullName>AARR__c</fullName>
    <description>created for TAGCRM-980</description>
    <label>AARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>