unpackaged/main/default/objects/Opportunity/fields/ACAR__c.field-meta.xml
<CustomField>
    <fullName>ACAR__c</fullName>
    <description>created for TAGCRM-980</description>
    <label>ACAR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>