unpackaged/main/default/objects/Opportunity/fields/Account_Owner_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Placeholder__c</fullName>
    <description>created for TAGCRM-171. Holds Opp&apos;s Account Owner&apos;s Name</description>
    <formula>Account.Owner.FirstName + &apos; &apos; +  Account.Owner.LastName</formula>
    <label>Account Owner Placeholder</label>
    <type>Text</type>
</CustomField>