unpackaged/main/default/objects/Opportunity/fields/Bill_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Bill_Start_Date__c</fullName>
    <description>created for TAGCRM-594 / changed for TAGCRM-1068</description>
    <inlineHelpText>Estimated billing start date</inlineHelpText>
    <label>Bill Start Date</label>
    <type>Date</type>
</CustomField>