unpackaged/main/default/objects/Opportunity/fields/Compelling_Event__c.field-meta.xml
<CustomField>
    <fullName>Compelling_Event__c</fullName>
    <description>created for TAGCRM-548</description>
    <inlineHelpText>What is driving the customer to make a decision or a change in the current situation? What is the payback if they make a change? What are the consequences if they do not act? What specific date is associated with the consequences/ payback?</inlineHelpText>
    <label>Compelling Event</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>