unpackaged/main/default/objects/Opportunity/fields/Competitive_Strategy__c.field-meta.xml
<CustomField>
    <fullName>Competitive_Strategy__c</fullName>
    <label>Competitive Strategy</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Defend</fullName>
            </value>
            <value>
                <fullName>Develop</fullName>
            </value>
            <value>
                <fullName>Flanking</fullName>
            </value>
            <value>
                <fullName>Fragment</fullName>
            </value>
            <value>
                <fullName>Frontal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>