unpackaged/main/default/objects/Opportunity/fields/Competitor_Name__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Name__c</fullName>
    <description>created for TAGCRM-128</description>
    <label>Competitor(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Survey Based Market Research(Kynetec)</fullName>
            </value>
            <value>
                <fullName>Survey Based Market Research(SPC)</fullName>
            </value>
            <value>
                <fullName>Premier Crop</fullName>
            </value>
            <value>
                <fullName>IN10T</fullName>
            </value>
            <value>
                <fullName>In-House Built Systems</fullName>
            </value>
            <value>
                <fullName>DCI</fullName>
            </value>
            <value>
                <fullName>AgCall</fullName>
            </value>
            <value>
                <fullName>Beck Ag</fullName>
            </value>
            <value>
                <fullName>AgData</fullName>
            </value>
            <value>
                <fullName>AgriTrend</fullName>
            </value>
            <value>
                <fullName>Smartwyre</fullName>
            </value>
            <value>
                <fullName>Aker</fullName>
            </value>
            <value>
                <fullName>Farmers Edge</fullName>
            </value>
            <value>
                <fullName>Taranis</fullName>
            </value>
            <value>
                <fullName>Decisive Farming</fullName>
            </value>
            <value>
                <fullName>Climate</fullName>
            </value>
            <value>
                <fullName>Retail FMS Systems</fullName>
            </value>
            <value>
                <fullName>One Soil</fullName>
            </value>
            <value>
                <fullName>EOS</fullName>
            </value>
            <value>
                <fullName>Authenticate</fullName>
            </value>
            <value>
                <fullName>FoodLogic</fullName>
            </value>
            <value>
                <fullName>Quadex</fullName>
            </value>
            <value>
                <fullName>iAuditor and Excel</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>ERP Systems</fullName>
            </value>
            <value>
                <fullName>Paper</fullName>
            </value>
            <value>
                <fullName>TraceOne</fullName>
            </value>
            <value>
                <fullName>Agriplace</fullName>
            </value>
            <value>
                <fullName>Food Experts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>