unpackaged/main/default/objects/Opportunity/fields/contactURL__c.field-meta.xml
<CustomField>
    <fullName>contactURL__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;&apos;/lightning/r/&apos;&amp; Id &amp;&apos;/related/OpportunityContactRoles/view&apos;, &apos;Contacts&apos;)</formula>
    <label>contactURL</label>
    <type>Text</type>
</CustomField>