unpackaged/main/default/objects/Opportunity/fields/Contract_Term_Months__c.field-meta.xml
<CustomField>
    <fullName>Contract_Term_Months__c</fullName>
    <defaultValue>12</defaultValue>
    <label>Contract Term(Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>