unpackaged/main/default/objects/Opportunity/fields/Cost_Of_Living__c.field-meta.xml
<CustomField>
    <fullName>Cost_Of_Living__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created for TAGCRM-971</description>
    <label>Cost Of Living</label>
    <type>Checkbox</type>
</CustomField>