unpackaged/main/default/objects/Opportunity/fields/Created_from_Lead__c.field-meta.xml
<CustomField>
    <fullName>Created_from_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created from Lead</label>
    <type>Checkbox</type>
</CustomField>