unpackaged/main/default/objects/Opportunity/fields/Critical_Success_Factors__c.field-meta.xml
<CustomField>
    <fullName>Critical_Success_Factors__c</fullName>
    <description>created for TAGCRM-550</description>
    <inlineHelpText>Determine what has to happen for you to win this opportunity. Identify things the customer must do, things the competition must do and the things that you must do.</inlineHelpText>
    <label>Critical Success Factors</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>