unpackaged/main/default/objects/Opportunity/fields/Current_Contract_Annual_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Contract_Annual_Value__c</fullName>
    <description>created for TAGCRM-594</description>
    <inlineHelpText>Current Contract Annual Revenue. Enter manually based on customer’s existing contract. If no contract, leave as zero/null.</inlineHelpText>
    <label>CCAR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>