unpackaged/main/default/objects/Opportunity/fields/Current_Systems__c.field-meta.xml
<CustomField>
    <fullName>Current_Systems__c</fullName>
    <description>created for TAGCRM-129</description>
    <label>Current Systems</label>
    <length>255</length>
    <type>Text</type>
</CustomField>