unpackaged/main/default/objects/Opportunity/fields/Cycle_Time_SIT_1_to_Closed__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Time_SIT_1_to_Closed__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Days b/w SIT 1 to closed stage</description>
    <inlineHelpText>Days b/w SIT 1 to SIT 5 stage</inlineHelpText>
    <label>Cycle Time  SIT 1 to Closed</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>