unpackaged/main/default/objects/Opportunity/fields/Cycle_Time_SIT_2_to_SIT_1__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Time_SIT_2_to_SIT_1__c</fullName>
    <defaultValue>0</defaultValue>
    <description>created for TAGCRM-181</description>
    <inlineHelpText>Days b/w SIT 2 to SIT 1 stage</inlineHelpText>
    <label>Cycle Time  SIT 2 to SIT 1</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>