unpackaged/main/default/objects/Opportunity/fields/Cycle_Time_SIT_3_to_SIT_2__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Time_SIT_3_to_SIT_2__c</fullName>
    <defaultValue>0</defaultValue>
    <description>created for TAGCRM-181</description>
    <inlineHelpText>Days b/w SIT 3 to SIT 2 stage</inlineHelpText>
    <label>Cycle Time  SIT 3 to SIT 2</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>