unpackaged/main/default/objects/Opportunity/fields/Cycle_Time_SIT_4_to_SIT_3__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Time_SIT_4_to_SIT_3__c</fullName>
    <defaultValue>0</defaultValue>
    <description>created for TAGCRM-181</description>
    <inlineHelpText>Days b/w SIT 4 to SIT 3 stage</inlineHelpText>
    <label>Cycle Time  SIT 4 to SIT 3</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>