unpackaged/main/default/objects/Opportunity/fields/Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close__c</fullName>
    <description>created for TAGCRM-441</description>
    <formula>IF(  (ISPICKVAL(StageName, &apos;Closed Won&apos;)||ISPICKVAL(StageName, &apos;Closed Lost&apos;) ),   DATEVALUE( Last_Stage_Change__c ) -  DATEVALUE( CreatedDate),null )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>calculate diff b/w date when opp is closed and date when opp is created</inlineHelpText>
    <label>Days to Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>