unpackaged/main/default/objects/Opportunity/fields/Deal_Lost_Reason_Comments__c.field-meta.xml
<CustomField>
    <fullName>Deal_Lost_Reason_Comments__c</fullName>
    <description>created for TAGCRM-558</description>
    <label>Lost Reason Notes</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>