unpackaged/main/default/objects/Opportunity/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <description>created for TAGCRM-124</description>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Master Services Agreement</fullName>
            </value>
            <value>
                <fullName>Purchase Order</fullName>
            </value>
            <value>
                <fullName>RFP</fullName>
            </value>
            <value>
                <fullName>Statement of Work</fullName>
            </value>
            <value>
                <fullName>Subscription Agreement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>