unpackaged/main/default/objects/Opportunity/fields/Last_Stage_Change__c.field-meta.xml
<CustomField>
    <fullName>Last_Stage_Change__c</fullName>
    <description>created for TAGCRM -178</description>
    <inlineHelpText>When opportunity stage is changed, Last Stage Change will be updated</inlineHelpText>
    <label>Last Stage Change</label>
    <type>DateTime</type>
</CustomField>