unpackaged/main/default/objects/Opportunity/fields/Lost_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Details__c</fullName>
    <description>Created for TAGCRM-558, detailed reasons for lost opportunity</description>
    <label>Lost Reason Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lost_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bankruptcy</fullName>
            </value>
            <value>
                <fullName>L2R Experience with TELUS</fullName>
            </value>
            <value>
                <fullName>No Internal Support (Decision Maker)</fullName>
            </value>
            <value>
                <fullName>Status quo</fullName>
            </value>
            <value>
                <fullName>TELUS Brand Recognition/Reputation</fullName>
            </value>
            <value>
                <fullName>TELUS Ag Brand Recognition/Reputation</fullName>
            </value>
            <value>
                <fullName>TELUS Ag Partner Expertise</fullName>
            </value>
            <value>
                <fullName>Poor Sales Enablement Tools</fullName>
            </value>
            <value>
                <fullName>Poor TELUS Ag Operational Responsiveness</fullName>
            </value>
            <value>
                <fullName>Feature(s) Not Aligned to Customer Needs</fullName>
            </value>
            <value>
                <fullName>Footprint</fullName>
            </value>
            <value>
                <fullName>Lack of Demo/Technology Lab Support</fullName>
            </value>
            <value>
                <fullName>No Self-serve/Self-Install Capabilities</fullName>
            </value>
            <value>
                <fullName>Reliability (Network/Solution)</fullName>
            </value>
            <value>
                <fullName>Product Strategic Direction</fullName>
            </value>
            <value>
                <fullName>Transition Plan Poor or Missing</fullName>
            </value>
            <value>
                <fullName>Implementation Charges Too High</fullName>
            </value>
            <value>
                <fullName>Non-competitive Pricing</fullName>
            </value>
            <value>
                <fullName>Pricing Offer too Complex</fullName>
            </value>
            <value>
                <fullName>Switching/Migration Cost Too Expensive</fullName>
            </value>
            <value>
                <fullName>Duplicate of an Existing Opportunity</fullName>
            </value>
            <value>
                <fullName>Marketing Lead or Initiative Not Valid</fullName>
            </value>
            <value>
                <fullName>Other (See Notes)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>