unpackaged/main/default/objects/Opportunity/fields/Next_Step_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Due_Date__c</fullName>
    <description>created for TAGCRM-552</description>
    <label>Next Step Due Date</label>
    <type>Date</type>
</CustomField>