unpackaged/main/default/objects/Opportunity/fields/Next_Step_Due_Flag__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Due_Flag__c</fullName>
    <description>created for TAGCRM-553</description>
    <formula>IMAGE(
IF( Next_Step_Due_Date__c &gt; Today () + 14 , &quot;/img/samples/flag_green.gif&quot;,
   IF(AND(Next_Step_Due_Date__c &gt;= Today () , Next_Step_Due_Date__c &lt;= Today () + 14), &quot;/img/samples/flag_yellow.gif&quot;,
      IF(Next_Step_Due_Date__c &lt; Today (), &quot;/img/samples/flag_red.gif&quot;,&quot;/s.gif&quot;)
     )
  ),
&quot;Next Step Due Flag&quot;)</formula>
    <label>Next Step Due Flag</label>
    <type>Text</type>
</CustomField>