unpackaged/main/default/objects/Opportunity/fields/Opp_Owner_Manager_Email_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner_Manager_Email_Placeholder__c</fullName>
    <description>created for TAGCRM-169. Holds Opp Owner manager&apos;s Email address, updated from a workflow</description>
    <label>Opp Owner Manager Email Placeholder</label>
    <type>Email</type>
</CustomField>