unpackaged/main/default/objects/Opportunity/fields/Opp_Owner_Manager_Placeholder__c.field-meta.xml
<CustomField>
    <fullName>Opp_Owner_Manager_Placeholder__c</fullName>
    <description>created for TAGCRM-169. Holds Opp Owner manager&apos;s Name</description>
    <formula>Owner.Manager.FirstName + &apos; &apos; + Owner.Manager.LastName</formula>
    <label>Opp Owner Manager Placeholder</label>
    <type>Text</type>
</CustomField>