unpackaged/main/default/objects/Opportunity/fields/Opportunity_Profile__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Profile__c</fullName>
    <description>created for TAGCRM-547</description>
    <inlineHelpText>Describe the customer&apos;s project or application. What are the customer&apos;s business objectives for the project? What is the total cost and/or budget for the project? How does the project affect the customer&apos;s overall business?</inlineHelpText>
    <label>Opportunity Profile</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>