unpackaged/main/default/objects/Opportunity/fields/Opportunity_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Unique_Identifier__c</fullName>
    <description>created for TAGCRM-133. Unique combination of Opp Name and Account Name</description>
    <label>Opportunity Unique Identifier</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>