unpackaged/main/default/objects/Opportunity/fields/Other_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Other_Competitor__c</fullName>
    <description>created for TAGCRM-128</description>
    <inlineHelpText>When Competitor is selected as other, enter Other Competitor</inlineHelpText>
    <label>Other Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>