unpackaged/main/default/objects/Opportunity/fields/Response_to_RFP__c.field-meta.xml
<CustomField>
    <fullName>Response_to_RFP__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created for TAGCRM-126</description>
    <label>Response to RFP</label>
    <type>Checkbox</type>
</CustomField>