unpackaged/main/default/objects/Opportunity/fields/RFP_and_Trial_Demo_Report__c.field-meta.xml
<CustomField>
    <fullName>RFP_and_Trial_Demo_Report__c</fullName>
    <formula>HYPERLINK(LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))&amp;&apos;/lightning/r/Report/00O05000000OB3MEAW/view&apos;, &quot;Report&quot; ,&quot;_blank&quot;)</formula>
    <label>RFP and Trial Demo Report</label>
    <type>Text</type>
</CustomField>