unpackaged/main/default/objects/Opportunity/fields/TELUS_TAG_Engagement__c.field-meta.xml
<CustomField>
    <fullName>TELUS_TAG_Engagement__c</fullName>
    <description>created for TAGCRM-556</description>
    <inlineHelpText>Identify any other TELUS or TELUS Agriculture entities that referred or engaged on this opportunity</inlineHelpText>
    <label>TELUS/TAG Engagement</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AFS/Exceedra</fullName>
            </value>
            <value>
                <fullName>AGI</fullName>
            </value>
            <value>
                <fullName>Decisive Farming</fullName>
            </value>
            <value>
                <fullName>Farm At Hand</fullName>
            </value>
            <value>
                <fullName>GoCo</fullName>
            </value>
            <value>
                <fullName>IoT</fullName>
            </value>
            <value>
                <fullName>Muddy Boots</fullName>
            </value>
            <value>
                <fullName>TELUS Business (TBS)</fullName>
            </value>
            <value>
                <fullName>TELUS Consumer</fullName>
            </value>
            <value>
                <fullName>TELUS Health</fullName>
            </value>
            <value>
                <fullName>TELUS International</fullName>
            </value>
            <value>
                <fullName>TKXS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>