unpackaged/main/default/objects/Opportunity/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <description>created for TAGCRM-443</description>
    <formula>TEXT( Account.Time_Zone__c )</formula>
    <inlineHelpText>Time Zone of Account</inlineHelpText>
    <label>Time Zone</label>
    <type>Text</type>
</CustomField>