unpackaged/main/default/objects/Opportunity/fields/Top_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Top_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to indicate if the opportunity is a top opportunity that will be given more focus to progress to SIT 2.</description>
    <inlineHelpText>Check this box to indicate if the opportunity is a top opportunity that will be given more focus to progress to SIT 2.</inlineHelpText>
    <label>Top X Opportunity?</label>
    <type>Checkbox</type>
</CustomField>