unpackaged/main/default/objects/Opportunity/fields/Total_Contract_Value_Growth_TCVg__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value_Growth_TCVg__c</fullName>
    <description>created for TAGCRM-594</description>
    <inlineHelpText>Total Contract Value Growth. Represents the difference in value between the Total Contract Value and the Current Contract Annual Value.</inlineHelpText>
    <label>TCVg</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>