unpackaged/main/default/objects/Opportunity/fields/Total_Contract_Value_TCV__c.field-meta.xml
<CustomField>
    <fullName>Total_Contract_Value_TCV__c</fullName>
    <description>created for TAGCRM-594Total Contract Value (TCV)</description>
    <inlineHelpText>Total Contract Value. This also represents the Amount of the opportunity.</inlineHelpText>
    <label>TCV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>