unpackaged/main/default/objects/Opportunity/fields/Total_Contracted_Professional_Services__c.field-meta.xml
<CustomField>
    <fullName>Total_Contracted_Professional_Services__c</fullName>
    <description>created for TAGCRM-980</description>
    <inlineHelpText>Total value of all one-time professional services opportunity products over the proposed contract term</inlineHelpText>
    <label>Total Prof. Services</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>