unpackaged/main/default/objects/Opportunity/fields/Total_Contracted_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Contracted_Recurring_Revenue__c</fullName>
    <inlineHelpText>Total Contracted Recurring Revenue over the contract term.</inlineHelpText>
    <label>TCRR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>