unpackaged/main/default/objects/Opportunity/fields/Total_Hardware_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_Hardware_Revenue__c</fullName>
    <description>created for TAGCRM-594</description>
    <inlineHelpText>Total value of all one-time hardware opportunity products over the proposed contract term.</inlineHelpText>
    <label>Total Hardware</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>