unpackaged/main/default/objects/Opportunity/fields/Total_One_Time_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Total_One_Time_Revenue__c</fullName>
    <description>created for TAGCRM-594</description>
    <inlineHelpText>Total value of all opportunity products that are non-recurring revenue, excluding professional services and hardware, over the proposed contract term.</inlineHelpText>
    <label>Total One-Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>