unpackaged/main/default/objects/Opportunity/fields/Trial_or_Sandbox_Provided__c.field-meta.xml
<CustomField>
    <fullName>Trial_or_Sandbox_Provided__c</fullName>
    <defaultValue>false</defaultValue>
    <description>created for TAGCRM-126</description>
    <label>Trial or Sandbox Provided</label>
    <type>Checkbox</type>
</CustomField>