unpackaged/main/default/objects/Opportunity/fields/Trial_Sandbox_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Trial_Sandbox_End_Date__c</fullName>
    <description>created for TAGCRM-126</description>
    <label>Trial/Sandbox End Date</label>
    <type>Date</type>
</CustomField>