unpackaged/main/default/objects/Opportunity/fields/Unique_Business_Value_UBV__c.field-meta.xml
<CustomField>
    <fullName>Unique_Business_Value_UBV__c</fullName>
    <description>created for TAGCRM-549</description>
    <inlineHelpText>Define your unique business value with a value proposition that is specific to the customer, defines a measurable business result and creates credibility by proving your ability to deliver. Is this confirmed with the customer?</inlineHelpText>
    <label>Unique Business Value (UBV)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>