unpackaged/main/default/objects/Opportunity/fields/Vertical__c.field-meta.xml
<CustomField>
    <fullName>Vertical__c</fullName>
    <description>This field contains the vertical (market segment) from the associated Account record.</description>
    <formula>TEXT(Account.Vertical__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field contains the vertical (market segment) from the associated Account record.</inlineHelpText>
    <label>Vertical</label>
    <type>Text</type>
</CustomField>