unpackaged/main/default/objects/Opportunity/fields/Won_Reason__c.field-meta.xml
<CustomField>
    <fullName>Won_Reason__c</fullName>
    <description>Created for TAGCRM-557, Reason for winning Opportunity</description>
    <label>Won Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic Alignment &amp; Relationship</fullName>
            </value>
            <value>
                <fullName>Operation Sales Process</fullName>
            </value>
            <value>
                <fullName>Solution Fit</fullName>
            </value>
            <value>
                <fullName>Pricing &amp; Cost</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>