unpackaged/main/default/objects/Opportunity/fields/Won_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Won_Reason_Details__c</fullName>
    <description>Created for TAGCRM-557, Opportunity won reason details based on won reason selected</description>
    <label>Won Reason Details</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Won_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Alignment with Decision Maker (Internal Support)</fullName>
            </value>
            <value>
                <fullName>Auto-Renewal</fullName>
            </value>
            <value>
                <fullName>L2R Experience with TELUS Ag</fullName>
            </value>
            <value>
                <fullName>TELUS Ag Brand Recognition/Reputation</fullName>
            </value>
            <value>
                <fullName>TELUS Ag Partner Expertise</fullName>
            </value>
            <value>
                <fullName>Broader TELUS Strategic Relationship</fullName>
            </value>
            <value>
                <fullName>Quick TELUS Ag Operational Responsiveness</fullName>
            </value>
            <value>
                <fullName>Demo/Technology Lab support</fullName>
            </value>
            <value>
                <fullName>Feature(s) Aligned to Customer Needs</fullName>
            </value>
            <value>
                <fullName>Reliability (Network/Solution)</fullName>
            </value>
            <value>
                <fullName>Product Strategic Direction</fullName>
            </value>
            <value>
                <fullName>Complimentary Product/Solution to Existing TELUS Ag Products</fullName>
            </value>
            <value>
                <fullName>Self-serve/Self-Install Capabilities</fullName>
            </value>
            <value>
                <fullName>Transition Plan</fullName>
            </value>
            <value>
                <fullName>Competitive Pricing</fullName>
            </value>
            <value>
                <fullName>Implementation or Migration Cost</fullName>
            </value>
            <value>
                <fullName>Pricing Offer Simple and Easy to Understand</fullName>
            </value>
            <value>
                <fullName>Other (See Notes)</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>