unpackaged/main/default/objects/Opportunity/fields/Won_Reason_Notes__c.field-meta.xml
<CustomField>
    <fullName>Won_Reason_Notes__c</fullName>
    <description>Created for TAGCRM-557, Any additional notes</description>
    <label>Won Reason Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>