unpackaged/main/default/objects/Opportunity/recordTypes/Opportunity_Record_Type.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Record_Type</fullName>
    <active>true</active>
    <businessProcess>Opportunity Process</businessProcess>
    <description>Record Type for Opportunities</description>
    <label>Opportunity Record Type</label>
</RecordType>