unpackaged/main/default/objects/Opportunity/validationRules/Cannot_Change_Stage_After_Closed_Won.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_Change_Stage_After_Closed_Won</fullName>
    <active>true</active>
    <description>Validation rule that the stage can’t change after closed won by a sales user.</description>
    <errorConditionFormula>AND(
ISPICKVAL(PRIORVALUE(StageName),&quot;Closed Won&quot;),
NOT($Profile.Name = &quot;System Administrator&quot; ),
NOT(ISCHANGED( Current_Systems__c ))
) &amp;&amp; (ISCHANGED(StageName)|| ISCHANGED( Competitor_Name__c )|| ISCHANGED( Other_Competitor__c ))</errorConditionFormula>
    <errorMessage>You cannot change Competitor or Stage values once an opportunity is Closed Won</errorMessage>
</ValidationRule>