unpackaged/main/default/objects/Opportunity/validationRules/EditTopxOpportunityOnlySit5orSit4orSit3.validationRule-meta.xml
<ValidationRule>
    <fullName>EditTopxOpportunityOnlySit5orSit4orSit3</fullName>
    <active>true</active>
    <description>Validation rule allow updating the Top x Opportunity only when Opp is in Sit 5 or SIT 4 or SIT 3</description>
    <errorConditionFormula>AND(
	ISCHANGED( Top_Opportunity__c ),
	NOT(ISPICKVAL( StageName , &quot;SIT 5: Identify Target&quot;)),
	NOT(ISPICKVAL( StageName , &quot;SIT 4: Confirm Opportunity&quot;)),
	NOT(ISPICKVAL( StageName , &quot;SIT 3: Qualify Opportunity&quot;))
)</errorConditionFormula>
    <errorDisplayField>Top_Opportunity__c</errorDisplayField>
    <errorMessage>You can only edit the &quot;Top X Opportunity&quot; field in SIT 5, SIT 4 or SIT 3.</errorMessage>
</ValidationRule>